# pgman

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dn/: README.md  plan1.md  plan2.md
dn/attic/: prompt1.md  prompt2.md
src/pgman/: __main__.py  _version.py  cli.py  config.py  db.py  dbadmin.py  passwords.py
src/pgman/commands/: about.py  dropdb.py  listdbs.py  newdb.py  ping.py
tests/: conftest.py  test_about.py  test_config.py  test_dropdb.py  test_listdbs.py  test_newdb.py  test_passwords.py  test_ping.py
