[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pgman"
dynamic = ["version"]
description = "PostgreSQL management and maintenance CLI utility"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "psycopg2-binary>=2.9",
    "pyyaml>=6.0",
]

[project.scripts]
pgman = "pgman.cli:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pgman/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pgman"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.format]
exclude = ["src/pgman/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
